[package]
name = "nine"
version = "0.6.2"
edition = "2018"
description = "The 9p protocol as a serde format and message types."
authors = ["Kevin M Granger <git@kevinmgranger.me>"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/KevinMGranger/nine"
categories = ["parser-implementations"]

[badges.maintenance]
status = "experimental"

[dependencies]
serde = {version = "1.0", features = ["derive"] }
byteorder = "1.1.0"
bitflags = "1.0.3"
thiserror = "1.0.24"
